# st_handeye_eval

./: .gitignore  CMakeLists.txt  handeye_eval.cpp  handeye_eval.h  main.cpp  packalgo_circle_grid_detector.cpp  packalgo_circle_grid_detector.h  stability_analysis.cpp  stability_analysis.h  super_edge_detector.cpp  super_edge_detector.h
